# homebrew-tap

./: .gitignore  CLA.md  CNAME  Cargo.toml  DEMO_DEV.md  LICENSE  README.md  SETUP.md  SKILL.md  VAULT.md  astro.config.mjs  package-lock.json  package.json  pyproject.toml  tsconfig.json  tsup.config.ts  vitest.config.ts
.cargo/: audit.toml
.github/workflows/: ci.yml  nightly.yml  publish.yml  release.yml
Formula/: hebbs-full.rb  hebbs.rb
benches/: baseline.json
crates/hebbs-bench/src/: dataset.rs  degradation.rs  latency.rs  resources.rs  scalability.rs
crates/hebbs-cli/: Cargo.toml
crates/hebbs-cli/src/: cli.rs  commands.rs  config.rs  error.rs  format.rs  lib.rs  main.rs  rest.rs
crates/hebbs-client/src/: convert.rs  types.rs
crates/hebbs-client/tests/: property_tests.rs
crates/hebbs-core/: Cargo.toml
crates/hebbs-core/benches/: core_benchmarks.rs
crates/hebbs-core/src/: contradict.rs  decay.rs  engine.rs  error.rs  lib.rs  memory.rs  recall.rs  reflect.rs
crates/hebbs-core/tests/: contradiction_tests.rs  hebbian_demo.rs  integration_tests.rs  lifecycle_tests.rs  property_tests.rs  stress_tests.rs  system_tests.rs  tenant_isolation_tests.rs
crates/hebbs-embed/: Cargo.toml
crates/hebbs-embed/src/: config.rs  lib.rs  model.rs  onnx.rs
crates/hebbs-ffi/src/: convert.rs  lib.rs
crates/hebbs-index/src/: graph.rs  lib.rs  manager.rs  neighborhood.rs
crates/hebbs-llm/: Cargo.toml
crates/hebbs-llm/src/: anthropic.rs  contradiction.rs  error.rs  extraction.rs  gemini.rs  http.rs  lib.rs  mock.rs  ollama.rs  openai.rs  provider.rs
crates/hebbs-python-native/: Cargo.toml  README.md  pyproject.toml
crates/hebbs-python-native/src/: convert.rs  engine.rs  subscribe.rs
crates/hebbs-python/src/: convert.rs  engine.rs
crates/hebbs-reflect/: Cargo.toml
crates/hebbs-reflect/src/: llm.rs
crates/hebbs-server/src/: convert.rs  rest.rs
crates/hebbs-server/src/grpc/: subscribe_service.rs
crates/hebbs-server/tests/: grpc_integration.rs  rest_integration.rs  skill_e2e.rs
crates/hebbs-storage/src/: tenant.rs
crates/hebbs-vault/: Cargo.toml
crates/hebbs-vault/src/: config.rs  contradiction_writer.rs  extract.rs  ingest.rs  insight_writer.rs  lib.rs  manifest.rs  parser.rs  query.rs  query_log.rs  watcher.rs
crates/hebbs-vault/src/daemon/: client.rs  mod.rs  protocol.rs  vault_manager.rs
crates/hebbs-vault/src/panel/: mod.rs  routes.rs
crates/hebbs-vault/src/panel/static/: app.js  graph.js  index.html  panel.css
demo/: __main__.py  agent.py  cli.py  config.py  display.py  llm_client.py  memory_manager.py  package-lock.json  package.json  prompts.py  tsconfig.json
demo/configs/: gemini-vertex.toml  gemini.toml  local.toml  openai.toml
demo/scenarios/: __init__.py  base.py  discovery_call.py  forget_gdpr.py  multi_entity.py  multi_session.py  objection_handling.py  reflect_learning.py  subscribe_realtime.py
demo/src/: agent.ts  config.ts  display.ts  index.ts  llm-client.ts  memory-manager.ts
demo/src/scenarios/: base.ts  discovery-call.ts  index.ts  multi-session.ts  subscribe-realtime.ts
docker/: Dockerfile
hebbs/: SKILL.md
hebbs-demo/vault-test/: budget.md  company-research.md  engineering-handbook.md  incident-log.md  meeting-notes.md  product-roadmap.md  project-decisions.md  team.md
proto/: hebbs.proto
public/: CNAME  install
scripts/: generate_proto.sh  skill_smoke_test.sh
skills/hebbs/: SKILL.md
src/: client.ts  errors.ts  index.ts  proto.ts  types.ts
src/components/: AgentControl.astro  Architecture.astro  Benchmarks.astro  BlogSlider.astro  BrainAnalogy.astro  CodeExample.astro  Comparison.astro  Consolidation.astro  Cta.astro  Deployment.astro  Footer.astro  Hero.astro  MemoryPalaceDemo.astro  Nav.astro  Operations.astro  OutOfTheBox.astro  Problem.astro  RecallStrategies.astro  ScoringWeights.astro  WeightClass.astro
src/content/docs/: index.mdx
src/content/docs/api/: protobuf-schema.mdx  recall.mdx  rest-endpoints.mdx
src/content/docs/architecture/: embedding.mdx  overview.mdx  reflection-pipeline.mdx
src/content/docs/cli/: commands.mdx  output-formats.mdx  overview.mdx
src/content/docs/concepts/: lineage-edges.mdx  recall-strategies.mdx
src/content/docs/cookbooks/: agent-skill.mdx  background-learning.mdx  first-memory-agent.mdx  index.mdx
src/content/docs/getting-started/: installation.mdx  introduction.mdx  quickstart.mdx
src/content/docs/python/: client-reference.mdx
src/content/docs/typescript/: client-reference.mdx  error-handling.mdx  installation.mdx  overview.mdx  quickstart.mdx  subscribe-streaming.mdx  types-reference.mdx
src/content/docs/vault/: configuration.mdx  contradiction-detection.mdx  daemon.mdx  file-sync.mdx  initialization.mdx  memory-palace.mdx  overview.mdx
src/hebbs/: __init__.py  client.py  exceptions.py  types.py
src/hebbs/_generated/: hebbs_pb2.py  hebbs_pb2_grpc.py
src/hebbs/services/: health.py  memory.py  reflect.py  subscribe.py
src/layouts/: Layout.astro
src/pages/: index.astro
src/services/: health.ts  memory.ts  reflect.ts  subscribe.ts
src/styles/: global.css
tests/: conftest.py  test_config.py  test_e2e_python_sdk.py  test_exceptions.py  test_integration.py  test_llm_client.py  test_types.py  test_types_unit.py
tests/e2e/: e2e.test.ts
tests/integration/: integration.test.ts
tests/lifecycle/: simulate.sh
tests/lifecycle/vault-content/phase1/: architecture.md  team.md  tech-stack.md
tests/lifecycle/vault-content/phase2/: performance-q1.md  performance-q2.md  vendor-negative.md  vendor-positive.md
tests/lifecycle/vault-content/phase3/: architecture-v2.md  new-service.md
tests/lifecycle/vault-content/phase4/: retrospective.md  sprint-1.md  sprint-2.md  sprint-3.md  sprint-4.md  sprint-5.md
tests/unit/: errors.test.ts  types.test.ts
