[package]
name = "hebbs-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license = "BSL-1.1"
repository.workspace = true
description = "HEBBS interactive CLI client: REPL + one-shot commands"

[[bin]]
name = "hebbs-cli"
path = "src/main.rs"

[features]
default = ["grpc", "rest"]
grpc = ["dep:hebbs-proto", "dep:tonic", "dep:prost", "dep:prost-types", "dep:tokio-stream", "dep:rustyline"]
rest = ["dep:reqwest"]

[dependencies]
# gRPC transport (optional, for local daemon mode)
hebbs-proto = { path = "../hebbs-proto", optional = true }
tonic = { workspace = true, optional = true }
prost = { workspace = true, optional = true }
prost-types = { workspace = true, optional = true }
tokio-stream = { version = "0.1", optional = true }
rustyline = { workspace = true, optional = true }

# REST transport (optional, for remote server mode)
reqwest = { version = "0.12", features = ["json", "rustls-tls", "multipart"], optional = true }

# Always needed
tokio.workspace = true
clap.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
hex.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
comfy-table.workspace = true
owo-colors.workspace = true
dirs.workspace = true
ulid.workspace = true

[dev-dependencies]
tempfile.workspace = true
proptest.workspace = true
