[package]
name = "hebbs-python-native"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license = "BSL-1.1"
repository.workspace = true
description = "PyO3 native extension for embedded HEBBS engine (not the public SDK -- use 'hebbs' from PyPI instead)"

[lib]
name = "_hebbs_native"
crate-type = ["cdylib"]

[dependencies]
hebbs-core = { path = "../hebbs-core" }
hebbs-storage = { path = "../hebbs-storage" }
hebbs-embed = { path = "../hebbs-embed" }
hebbs-index = { path = "../hebbs-index" }
hebbs-reflect = { path = "../hebbs-reflect" }
pyo3 = { workspace = true }
serde_json = { workspace = true }
ulid = { workspace = true }
hex = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
