[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "hebbs-python-native"
version = "0.1.0"
description = "PyO3 native extension for embedded HEBBS engine (not the public SDK -- use 'hebbs' instead)"
requires-python = ">=3.9"
license = {text = "BSL-1.1"}
keywords = ["memory", "ai", "agent", "cognitive", "vector"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Rust",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "grpcio>=1.60",
    "protobuf>=4.25",
]

[project.optional-dependencies]
langchain = ["langchain-core>=0.2"]
crewai = ["crewai>=0.1"]

[tool.maturin]
features = ["pyo3/extension-module"]
module-name = "hebbs._hebbs_native"
