[package]
name = "hebbs-vault"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
license = "BSL-1.1"
description = "Unified HEBBS CLI: file-first markdown sync with dual-mode engine (local + remote)"

[[bin]]
name = "hebbs"
path = "src/bin/hebbs.rs"

[dependencies]
hebbs-core = { path = "../hebbs-core" }
hebbs-embed = { path = "../hebbs-embed" }
hebbs-index = { path = "../hebbs-index" }
hebbs-llm = { path = "../hebbs-llm" }
hebbs-storage = { path = "../hebbs-storage" }
hebbs-cli = { path = "../hebbs-cli" }
hebbs-reflect = { path = "../hebbs-reflect" }

serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = "0.9"
sha2 = { workspace = true }
hex = { workspace = true }
toml = { workspace = true }
ulid = { workspace = true }
chrono = { version = "0.4", features = ["serde"] }
thiserror = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }
notify = { version = "6", features = ["macos_fsevent"] }
slug = "0.1"
regex = "1"
tokio-util = { version = "0.7", features = ["rt"] }
globset = "0.4"
clap = { workspace = true }
tracing-subscriber = { workspace = true }
dirs = { workspace = true }
libc = { workspace = true }
axum = { workspace = true }
tower-http = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
proptest = { workspace = true }
tokio = { workspace = true, features = ["test-util", "macros"] }
